Fixed Speaker page alignment & community page wordings aligned to center

--- a/TechStash/src/main/resources/static/plugins/leaflet/leaflet.css
+++ b/TechStash/src/main/resources/static/plugins/leaflet/leaflet.css
@@ -473,7 +473,6 @@
 	line-height: 1.4;
 	}
 .leaflet-popup-content p {
-	margin: 18px 0;
 	}
 .leaflet-popup-tip-container {
 	width: 40px;
